--- a/readme.html
+++ b/readme.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
     <title>barehands</title>
     <link rel="stylesheet" type="text/css" href="default.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
 <body>
 
@@ -35,4 +37,5 @@ git --work-tree=/home/$USER/projects --git-dir=/home/$USER/Barehands/barehands.g
 
 <p>You now should alread have a push / sync setup where you can see files update live after push.</p>
 
+<script>hljs.highlightAll();</script>
 </body></html>
