--- a/index.html
+++ b/index.html
@@ -90,49 +90,61 @@ end
 end
 </code></pre>
 
-<p><a id="chk-6"></a><strong>6. ~/Desktop/autoodocs/lib/parser.lua:129</strong>
+<p><a id="chk-6"></a><strong>6. ~/Desktop/autoodocs/lib/parser.lua:119</strong>
+<em>↳ <a href="#run-3">@run 3.</a></em></p>
+
+<p>shell type comments</p>
+
+
+<p><a id="chk-7"></a><strong>7. ~/Desktop/autoodocs/lib/parser.lua:124</strong>
+<em>↳ <a href="#run-3">@run 3.</a></em></p>
+
+<p>double-slash comments</p>
+
+
+<p><a id="chk-8"></a><strong>8. ~/Desktop/autoodocs/lib/parser.lua:129</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>double-dash comments</p>
 
 
-<p><a id="chk-7"></a><strong>7. ~/Desktop/autoodocs/lib/parser.lua:134</strong>
+<p><a id="chk-9"></a><strong>9. ~/Desktop/autoodocs/lib/parser.lua:134</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>C-style block opening</p>
 
 
-<p><a id="chk-8"></a><strong>8. ~/Desktop/autoodocs/lib/parser.lua:141</strong>
+<p><a id="chk-10"></a><strong>10. ~/Desktop/autoodocs/lib/parser.lua:141</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>HTML comment opening</p>
 
 
-<p><a id="chk-9"></a><strong>9. ~/Desktop/autoodocs/lib/parser.lua:148</strong>
+<p><a id="chk-11"></a><strong>11. ~/Desktop/autoodocs/lib/parser.lua:148</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>block comment continuation lines</p>
 
 
-<p><a id="chk-10"></a><strong>10. ~/Desktop/autoodocs/lib/parser.lua:159</strong>
+<p><a id="chk-12"></a><strong>12. ~/Desktop/autoodocs/lib/parser.lua:159</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>html closing</p>
 
 
-<p><a id="chk-11"></a><strong>11. ~/Desktop/autoodocs/lib/parser.lua:165</strong>
+<p><a id="chk-13"></a><strong>13. ~/Desktop/autoodocs/lib/parser.lua:165</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>triple-quote docstring styles</p>
 
 
-<p><a id="chk-12"></a><strong>12. ~/Desktop/autoodocs/lib/parser.lua:172</strong>
+<p><a id="chk-14"></a><strong>14. ~/Desktop/autoodocs/lib/parser.lua:172</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>single-quote docstring style</p>
 
 
-<p><a id="chk-13"></a><strong>13. ~/Desktop/autoodocs/lib/parser.lua:179</strong>
+<p><a id="chk-15"></a><strong>15. ~/Desktop/autoodocs/lib/parser.lua:179</strong>
 <em>↳ <a href="#run-3">@run 3.</a></em></p>
 
 <p>docstring continuation lines</p>
@@ -142,25 +154,25 @@ end
 </blockquote>
 
 
-<p><a id="chk-14"></a><strong>14. ~/Desktop/autoodocs/lib/parser.lua:319</strong>
+<p><a id="chk-16"></a><strong>16. ~/Desktop/autoodocs/lib/parser.lua:319</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Scan untagged block comment for tags</p>
 
 
-<p><a id="chk-15"></a><strong>15. ~/Desktop/autoodocs/lib/parser.lua:338</strong>
+<p><a id="chk-17"></a><strong>17. ~/Desktop/autoodocs/lib/parser.lua:338</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Scan untagged HTML comment for tags</p>
 
 
-<p><a id="chk-16"></a><strong>16. ~/Desktop/autoodocs/lib/parser.lua:371</strong>
+<p><a id="chk-18"></a><strong>18. ~/Desktop/autoodocs/lib/parser.lua:371</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Scan untagged docstring for tags</p>
 
 
-<p><a id="chk-17"></a><strong>17. ~/Desktop/autoodocs/lib/parser.lua:396</strong>
+<p><a id="chk-19"></a><strong>19. ~/Desktop/autoodocs/lib/parser.lua:396</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Detect comment style of current line</p>
@@ -168,31 +180,31 @@ end
 <pre><code class="language-lua">        local style = M.detect_style(line)
 </code></pre>
 
-<p><a id="chk-18"></a><strong>18. ~/Desktop/autoodocs/lib/parser.lua:438</strong>
+<p><a id="chk-20"></a><strong>20. ~/Desktop/autoodocs/lib/parser.lua:438</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Untagged block comment start - scan for tags</p>
 
 
-<p><a id="chk-19"></a><strong>19. ~/Desktop/autoodocs/lib/parser.lua:441</strong>
+<p><a id="chk-21"></a><strong>21. ~/Desktop/autoodocs/lib/parser.lua:441</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Untagged HTML comment start</p>
 
 
-<p><a id="chk-20"></a><strong>20. ~/Desktop/autoodocs/lib/parser.lua:444</strong>
+<p><a id="chk-22"></a><strong>22. ~/Desktop/autoodocs/lib/parser.lua:444</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Untagged double-quote docstring start</p>
 
 
-<p><a id="chk-21"></a><strong>21. ~/Desktop/autoodocs/lib/parser.lua:448</strong>
+<p><a id="chk-23"></a><strong>23. ~/Desktop/autoodocs/lib/parser.lua:448</strong>
 <em>↳ <a href="#run-4-2">@run 4.2</a></em></p>
 
 <p>Untagged single-quote docstring start</p>
 
 
-<h3><a id="chk-22"></a>22. ~/Desktop/autoodocs/lib/utils.lua:61</h3>
+<h3><a id="chk-24"></a>24. ~/Desktop/autoodocs/lib/utils.lua:61</h3>
 <p>Classify file language via extension or shebang</p>
 
 <blockquote>
@@ -213,11 +225,11 @@ end
 end
 </code></pre>
 
-<h3><a id="chk-23"></a>23. ~/Desktop/autoodocs/autodocs.lua:2</h3>
+<h3><a id="chk-25"></a>25. ~/Desktop/autoodocs/autodocs.lua:2</h3>
 <p><code>-s</code> outputs extra stats</p>
 
 
-<p><a id="chk-24"></a><strong>24. ~/Desktop/autoodocs/autodocs.lua:84</strong>
+<p><a id="chk-26"></a><strong>26. ~/Desktop/autoodocs/autodocs.lua:84</strong>
 <em>↳ <a href="#run-9">@run 9.</a></em></p>
 
 <p>Verify tagged files were discovered</p>
@@ -225,7 +237,7 @@ end
 <pre><code class="language-lua">    if #files == 0 then
 </code></pre>
 
-<p><a id="chk-25"></a><strong>25. ~/Desktop/autoodocs/autodocs.lua:105</strong>
+<p><a id="chk-27"></a><strong>27. ~/Desktop/autoodocs/autodocs.lua:105</strong>
 <em>↳ <a href="#run-9">@run 9.</a></em></p>
 
 <p>Verify extraction produced results</p>
@@ -233,7 +245,7 @@ end
 <pre><code class="language-lua">    if #records == 0 then
 </code></pre>
 
-<p><a id="chk-26"></a><strong>26. ~/Desktop/autoodocs/autodocs.lua:119</strong>
+<p><a id="chk-28"></a><strong>28. ~/Desktop/autoodocs/autodocs.lua:119</strong>
 <em>↳ <a href="#run-9">@run 9.</a></em></p>
 
 <p>Render and compare against existing output</p>
@@ -278,7 +290,49 @@ local gmatch = string.gmatch
 <pre><code class="language-lua">M.ADMONITIONS = {n="NOTE", t="TIP", i="IMPORTANT", w="WARNING", c="CAUTION"}
 </code></pre>
 
-<h3><a id="def-4"></a>4. ~/Desktop/autoodocs/lib/utils.lua:1</h3>
+<p><a id="def-4"></a><strong>4. ~/Desktop/autoodocs/lib/parser.lua:196</strong>
+<em>↳ <a href="#run-4">@run 4.</a></em></p>
+
+<div class="callout callout-note">
+    <div class="callout-title">NOTE</div>
+    <p>Bulk-read file first so <code>get_lang</code> reuses the buffer</p>
+</div>
+
+<p>avoids a second <code>open</code>+<code>read</code> just for shebang detection</p>
+
+<pre><code class="language-lua">    local f = open(filepath, "r")
+    if not f then return 0 end
+    local content = f:read("*a")
+    f:close()
+</code></pre>
+
+<p><a id="def-5"></a><strong>5. ~/Desktop/autoodocs/lib/parser.lua:203</strong>
+<em>↳ <a href="#run-4">@run 4.</a></em></p>
+
+<p>Initialize per-file state machine variables</p>
+
+<blockquote>
+    <p><code>get_lang</code> receives first line to avoid reopening the file</p>
+</blockquote>
+
+<pre><code class="language-lua">    local first   = match(content, "^([^\n]*)")
+    local rel     = HOME and sub(filepath, 1, #HOME) == HOME and "~" .. sub(filepath, #HOME + 1) or filepath
+    local lang    = get_lang(filepath, first)
+    local ln      = 0
+    local state   = ""
+    local tag     = ""
+    local start   = ""
+    local text    = ""
+    local nsubj   = 0
+    local cap_want = 0
+    local capture = 0
+    local subj    = ""
+    local adm     = nil
+    local pending = nil
+    local tag_indent = 0
+</code></pre>
+
+<h3><a id="def-6"></a>6. ~/Desktop/autoodocs/lib/utils.lua:1</h3>
 <p>Localize <code>string.*</code>, <code>table.*</code>, and <code>io.*</code> functions</p>
 
 <blockquote>
@@ -296,7 +350,7 @@ local M = {}
 
 </code></pre>
 
-<h3><a id="def-5"></a>5. ~/Desktop/autoodocs/lib/utils.lua:12</h3>
+<h3><a id="def-7"></a>7. ~/Desktop/autoodocs/lib/utils.lua:12</h3>
 <div class="callout callout-note">
     <div class="callout-title">NOTE</div>
     <p>Shell-escape a string for safe interpolation into <code>io.popen</code></p>
@@ -309,7 +363,7 @@ local M = {}
 end
 </code></pre>
 
-<h3><a id="def-6"></a>6. ~/Desktop/autoodocs/lib/utils.lua:41</h3>
+<h3><a id="def-8"></a>8. ~/Desktop/autoodocs/lib/utils.lua:41</h3>
 <p>Map file extension to fenced code block language</p>
 
 <pre><code class="language-lua">M.ext_map = {
@@ -326,7 +380,7 @@ end
 }
 </code></pre>
 
-<h3><a id="def-7"></a>7. ~/Desktop/autoodocs/lib/utils.lua:55</h3>
+<h3><a id="def-9"></a>9. ~/Desktop/autoodocs/lib/utils.lua:55</h3>
 <p>Map shebang interpreters to fenced code block language</p>
 
 <pre><code class="language-lua">M.shebang_map = {
@@ -335,7 +389,7 @@ end
 }
 </code></pre>
 
-<h3><a id="def-8"></a>8. ~/Desktop/autoodocs/lib/render.lua:1</h3>
+<h3><a id="def-10"></a>10. ~/Desktop/autoodocs/lib/render.lua:1</h3>
 <p>Localize functions for performance</p>
 
 <pre><code class="language-lua">local fmt    = string.format
@@ -343,27 +397,27 @@ local gmatch = string.gmatch
 local concat = table.concat
 </code></pre>
 
-<h3><a id="def-9"></a>9. ~/Desktop/autoodocs/lib/render.lua:5</h3>
+<h3><a id="def-11"></a>11. ~/Desktop/autoodocs/lib/render.lua:5</h3>
 <p>Import utils for trim</p>
 
 <pre><code class="language-lua">local utils = require("lib.utils")
 local trim = utils.trim
 </code></pre>
 
-<h3><a id="def-10"></a>10. ~/Desktop/autoodocs/lib/render.lua:8</h3>
+<h3><a id="def-12"></a>12. ~/Desktop/autoodocs/lib/render.lua:8</h3>
 <p>Define map</p>
 
 <pre><code class="language-lua">local M = {}
 </code></pre>
 
-<h3><a id="def-11"></a>11. ~/Desktop/autoodocs/lib/render.lua:11</h3>
+<h3><a id="def-13"></a>13. ~/Desktop/autoodocs/lib/render.lua:11</h3>
 <p>Map tag prefixes to anchor slugs and section titles</p>
 
 <pre><code class="language-lua">M.TAG_SEC   = {CHK="chk", DEF="def", RUN="run", ERR="err"}
 M.TAG_TITLE = {CHK="Checks", DEF="Defines", RUN="Runners", ERR="Errors"}
 </code></pre>
 
-<h3><a id="def-12"></a>12. ~/Desktop/autoodocs/autodocs.lua:10</h3>
+<h3><a id="def-14"></a>14. ~/Desktop/autoodocs/autodocs.lua:10</h3>
 <div class="callout callout-important">
     <div class="callout-title">IMPORTANT</div>
     <p>Defines with 9 line of subject</p>
@@ -392,7 +446,7 @@ M.TAG_TITLE = {CHK="Checks", DEF="Defines", RUN="Runners", ERR="Errors"}
     ---- handle errors with more definitions
 </code></pre>
 
-<h3><a id="def-13"></a>13. ~/Desktop/autoodocs/autodocs.lua:31</h3>
+<h3><a id="def-15"></a>15. ~/Desktop/autoodocs/autodocs.lua:31</h3>
 <p>Localize functions and load libraries</p>
 
 <pre><code class="language-lua">local match  = string.match
@@ -401,7 +455,7 @@ local sub    = string.sub
 local fmt    = string.format
 </code></pre>
 
-<h3><a id="def-14"></a>14. ~/Desktop/autoodocs/autodocs.lua:42</h3>
+<h3><a id="def-16"></a>16. ~/Desktop/autoodocs/autodocs.lua:42</h3>
 <p>Parse CLI args with defaults</p>
 
 <blockquote>
@@ -425,7 +479,7 @@ local US = "\031"
 
 </code></pre>
 
-<h3><a id="def-15"></a>15. ~/Desktop/autoodocs/autodocs.lua:58</h3>
+<h3><a id="def-17"></a>17. ~/Desktop/autoodocs/autodocs.lua:58</h3>
 <p>Global state for collected records and line count</p>
 
 <pre><code class="language-lua">local records = {}
@@ -490,16 +544,6 @@ end
     <p>for all styles including block continuations</p>
 </blockquote>
 
-<pre><code class="language-lua">function M.strip_comment(line, style)
-    -- @chk shell type comments
-    if style == "hash" then
-        local sc = match(line, "#(.*)") or ""
-        return trim_lead(sc)
-
-    -- @chk double-slash comments
-    elseif style == "dslash" then
-        local sc = match(line, "//(.*)") or ""
-</code></pre>
 
 <h3><a id="run-4"></a>4. ~/Desktop/autoodocs/lib/parser.lua:193</h3>
 <p>Walk one file as a line-by-line state machine</p>
@@ -508,16 +552,6 @@ end
     <p>extracting tagged comments into <code>records</code> table</p>
 </blockquote>
 
-<pre><code class="language-lua">function M.process_file(filepath, records, HOME, US)
-    -- @def:4!n Bulk-read file first so `get_lang` reuses the buffer
-    -- avoids a second `open`+`read` just for shebang detection
-    local f = open(filepath, "r")
-    if not f then return 0 end
-    local content = f:read("*a")
-    f:close()
-
-    -- @def:15 Initialize per-file state machine variables
-</code></pre>
 
 <p><a id="run-4-1"></a><strong>4.1 ~/Desktop/autoodocs/lib/parser.lua:221</strong>
 <em>↳ <a href="#run-4">@run 4.</a></em></p>
@@ -930,7 +964,7 @@ end
 <h2>Errors (@err)</h2>
 
 <p><a id="err-1"></a><strong>1. ~/Desktop/autoodocs/autodocs.lua:86</strong>
-<em>↳ <a href="#chk-24">@chk 24.</a></em></p>
+<em>↳ <a href="#chk-26">@chk 26.</a></em></p>
 
 <p>Handle missing tagged files</p>
 
@@ -946,7 +980,7 @@ end
 </code></pre>
 
 <p><a id="err-2"></a><strong>2. ~/Desktop/autoodocs/autodocs.lua:107</strong>
-<em>↳ <a href="#chk-25">@chk 25.</a></em></p>
+<em>↳ <a href="#chk-27">@chk 27.</a></em></p>
 
 <p>Handle extraction failure</p>
 
